force-app/main/default/objects/FIN_SettlementSchedule__c/FIN_SettlementSchedule__c.object-meta.xml
<CustomObject>
    <label>Settlement Schedule</label>
    <nameField>
        <displayFormat>SS-{0000000000}</displayFormat>
        <label>Settlement Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>