force-app/main/default/objects/FIN_SettlementSchedule__c/fields/FIN_ApplyAccumulators__c.field-meta.xml
<CustomField>
    <fullName>FIN_ApplyAccumulators__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Apply Accumulators?</label>
    <type>Checkbox</type>
</CustomField>