force-app/main/default/objects/FIN_SettlementSchedule__c/fields/FIN_Contract__c.field-meta.xml
<CustomField>
    <fullName>FIN_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Settlement Schedules</relationshipLabel>
    <relationshipName>Settlement_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>