force-app/main/default/objects/FIN_SettlementSchedule__c/fields/FIN_PublishingDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_PublishingDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Publishing Date</label>
    <type>Date</type>
</CustomField>