force-app/main/default/objects/FIN_SettlementSchedule__c/fields/FIN_RemittanceDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_RemittanceDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Remittance Date</label>
    <type>Date</type>
</CustomField>