force-app/main/default/objects/FIN_SettlementSchedule__c/fields/FIN_Settlement_Frequency__c.field-meta.xml
<CustomField>
    <fullName>FIN_Settlement_Frequency__c</fullName>
    <formula>TEXT(FIN_Contract__r.FIN_Settlement_Frequency__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Settlement Frequency</label>
    <type>Text</type>
</CustomField>