force-app/main/default/objects/FIN_SettlementSchedule__c/fields/FIN_SettlementReport_GenerationDate__c.field-meta.xml
<CustomField>
    <fullName>FIN_SettlementReport_GenerationDate__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Settlement Report Generation Date</label>
    <type>Date</type>
</CustomField>