force-app/main/default/objects/FIN_SettlementSchedule__c/fields/FIN_TemplateCategory__c.field-meta.xml
<CustomField>
    <fullName>FIN_TemplateCategory__c</fullName>
    <label>Template Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>test1</fullName>
                <default>true</default>
                <label>test1</label>
            </value>
            <value>
                <fullName>test2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>