force-app/main/default/objects/FIN_SettlementSchedule__c/fields/FIN_TotalAccumulatorAdj__c.field-meta.xml
<CustomField>
    <fullName>FIN_TotalAccumulatorAdj__c</fullName>
    <label>Total Accumulator Adj</label>
    <summarizedField>FIN_SettlementItem__c.FIN_ManualAmount__c</summarizedField>
    <summaryFilterItems>
        <field>FIN_SettlementItem__c.FIN_EntryType__c</field>
        <operation>equals</operation>
        <value>Manual Adjustment</value>
    </summaryFilterItems>
    <summaryForeignKey>FIN_SettlementItem__c.FIN_ParentSettlementSchedule__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>