force-app/main/default/objects/FIN_SettlementSchedule__c/fields/OFN_Label__c.field-meta.xml
<CustomField>
    <fullName>OFN_Label__c</fullName>
    <formula>&quot;Final Settlement Report for Contract # &quot; &amp;  FIN_Contract__r.ContractNumber &amp; &quot; Schedule# &quot; &amp;  Name + &quot;-&quot;  &amp;  TEXT(NOW() )</formula>
    <label>OFN Label</label>
    <type>Text</type>
</CustomField>