force-app/main/default/objects/FIN_SettlementSchedule__c/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>true</active>
    <description>Status = Draft</description>
    <label>Master</label>
</RecordType>