force-app/main/default/objects/FIN_SettlementSchedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FIN_Contract__c</columns>
    <columns>NAME</columns>
    <columns>FIN_ApplyAccumulators__c</columns>
    <columns>FIN_PublishingDate__c</columns>
    <columns>FIN_RemittanceDate__c</columns>
    <columns>FIN_SettlementReport_GenerationDate__c</columns>
    <columns>FIN_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>